--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.7",
@@ -11,8 +12,11 @@
     "webpack-node-externals": "^3.0.0"
   },
   "scripts": {
-  "start:dev": "ts-node-dev --respawn src/index.ts",
-  "build": "webpack --mode production",
-  "start:prod": "npm run build && node dist/bundle.js"
+    "start:dev": "ts-node-dev --respawn src/index.ts",
+    "build": "webpack --mode production",
+    "start:prod": "npm run build && node dist/bundle.js"
+  },
+  "dependencies": {
+    "uuid": "^10.0.0"
   }
 }
