--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "devDependencies": {
+    "@types/jest": "^29.5.13",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -17,7 +22,8 @@
     "start:dev": "ts-node-dev --respawn src/index.ts",
     "build": "webpack --mode production",
     "start:prod": "npm run build && node dist/bundle.js",
-    "fix": "prettier --write \"src/**/*.ts\""
+    "fix": "prettier --write \"src/**/*.ts\"",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "uuid": "^10.0.0"
